[gd_scene load_steps=7 format=3 uid="uid://ujkjrhthlsfe"]

[ext_resource type="Texture2D" uid="uid://dyncm5qkgdmvi" path="res://asset/sprite/tile_0273.png" id="1_d7wug"]
[ext_resource type="Script" path="res://Scripts/Minigames/PackageMinigame.gd" id="1_tlksu"]
[ext_resource type="Texture2D" uid="uid://djnrh48g5m2ks" path="res://asset/sprite/tile_0274.png" id="2_1f3o7"]
[ext_resource type="Texture2D" uid="uid://bbi7y6a4fy8eb" path="res://asset/sprite/tile_0275.png" id="3_iddpm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lxqtm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_d7wug")
}, {
"duration": 1.0,
"texture": ExtResource("2_1f3o7")
}, {
"duration": 1.0,
"texture": ExtResource("3_iddpm")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3b0vh"]
size = Vector2(242, 299)

[node name="PackageMinigame" type="Node2D"]
script = ExtResource("1_tlksu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(30, 30)
sprite_frames = SubResource("SpriteFrames_lxqtm")
animation = &"open"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 30.5)
shape = SubResource("RectangleShape2D_3b0vh")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
